--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "lincol"
+name = "lincolns"
 version = "0.1.0"
 authors = ["softprops <d.tangren@gmail.com>"]
 edition = "2018"
-description = "Provides a JSON Pointer lookup of line/column information within JSON and YAML content"
+description = "A JSON Pointer index for line/column information within JSON and YAML content"
 license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
