--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,17 @@ jobs:
         uses: hecrj/setup-rust-action@v1
       - uses: actions/checkout@master
       - run: cargo check --all
+
+  publish-docs:
+    runs-on: ubuntu-latest
+    needs: [codestyle, lint, compile]
+    steps:
+      - name: Set up Rust
+        uses: hecrj/setup-rust-action@v1
+      - uses: actions/checkout@master
+      - name: Publish
+        uses: docker://peaceiris/gh-pages:v2.3.1
+        env:
+          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: ./target/doc
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
