--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,10 @@ jobs:
     steps:
       - name: Set up Rust
         uses: hecrj/setup-rust-action@v1
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v1
+      - name: Generate Docs
+        shell: bash
+        run: cargo doc
       - name: Publish
         uses: docker://peaceiris/gh-pages:v2.3.1
         env:
@@ -69,7 +72,7 @@ jobs:
     steps:
       - name: Set up Rust
         uses: hecrj/setup-rust-action@v1
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v1
       - name: Publish
         if: startsWith(github.ref, 'refs/tags/')
         shell: bash
